; ModuleID = '/home/carl/AnghaBench/mongoose/examples/nRF51/http/extr_bleconfig.c_tcp_port_close.c'
source_filename = "/home/carl/AnghaBench/mongoose/examples/nRF51/http/extr_bleconfig.c_tcp_port_close.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tcp_pcb = type { i32 }

@TCP_STATE_REQUEST_CONNECTION = common dso_local global i32 0, align 4
@m_tcp_state = common dso_local global i32 0, align 4
@DISPLAY_LED_0 = common dso_local global i32 0, align 4
@DISPLAY_LED_1 = common dso_local global i32 0, align 4
@DISPLAY_LED_2 = common dso_local global i32 0, align 4
@DISPLAY_LED_3 = common dso_local global i32 0, align 4
@CONNECTED_LED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.tcp_pcb*)* @tcp_port_close to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @tcp_port_close(%struct.tcp_pcb* %0) #0 {
  %2 = alloca %struct.tcp_pcb*, align 8
  store %struct.tcp_pcb* %0, %struct.tcp_pcb** %2, align 8
  %3 = load i32, i32* @TCP_STATE_REQUEST_CONNECTION, align 4
  store i32 %3, i32* @m_tcp_state, align 4
  %4 = load %struct.tcp_pcb*, %struct.tcp_pcb** %2, align 8
  %5 = call i32 @tcp_arg(%struct.tcp_pcb* %4, i32* null)
  %6 = load %struct.tcp_pcb*, %struct.tcp_pcb** %2, align 8
  %7 = call i32 @tcp_sent(%struct.tcp_pcb* %6, i32* null)
  %8 = load %struct.tcp_pcb*, %struct.tcp_pcb** %2, align 8
  %9 = call i32 @tcp_recv(%struct.tcp_pcb* %8, i32* null)
  %10 = load %struct.tcp_pcb*, %struct.tcp_pcb** %2, align 8
  %11 = call i32 @tcp_err(%struct.tcp_pcb* %10, i32* null)
  %12 = load %struct.tcp_pcb*, %struct.tcp_pcb** %2, align 8
  %13 = call i32 @tcp_poll(%struct.tcp_pcb* %12, i32* null, i32 0)
  %14 = load %struct.tcp_pcb*, %struct.tcp_pcb** %2, align 8
  %15 = call i32 @tcp_close(%struct.tcp_pcb* %14)
  %16 = call i32 @UNUSED_VARIABLE(i32 %15)
  %17 = load i32, i32* @DISPLAY_LED_0, align 4
  %18 = load i32, i32* @DISPLAY_LED_1, align 4
  %19 = or i32 %17, %18
  %20 = load i32, i32* @DISPLAY_LED_2, align 4
  %21 = or i32 %19, %20
  %22 = load i32, i32* @DISPLAY_LED_3, align 4
  %23 = or i32 %21, %22
  %24 = call i32 @LEDS_OFF(i32 %23)
  %25 = load i32, i32* @CONNECTED_LED, align 4
  %26 = call i32 @LEDS_ON(i32 %25)
  ret void
}

declare dso_local i32 @tcp_arg(%struct.tcp_pcb*, i32*) #1

declare dso_local i32 @tcp_sent(%struct.tcp_pcb*, i32*) #1

declare dso_local i32 @tcp_recv(%struct.tcp_pcb*, i32*) #1

declare dso_local i32 @tcp_err(%struct.tcp_pcb*, i32*) #1

declare dso_local i32 @tcp_poll(%struct.tcp_pcb*, i32*, i32) #1

declare dso_local i32 @UNUSED_VARIABLE(i32) #1

declare dso_local i32 @tcp_close(%struct.tcp_pcb*) #1

declare dso_local i32 @LEDS_OFF(i32) #1

declare dso_local i32 @LEDS_ON(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
